2004-11-24  Al Riddoch  <alriddoch@zepler.org>

	* skstream/skstream.cpp, skstream/skstream.h, skstream/skstream_unix.h:
	  Re-work the way stream buffer objects are created so they are
	  allocated in the super class using new, and passed to the base
	  where they are deleted in the destructor. This ensures that the
	  stream buffer is never used un-initialised, or after destruction.
	  Move some lengthy constructors into the .cpp file.

	* configure.ac: Increment version and interface so applications can
	  ensure they get the updated API.

2004-11-23  Al Riddoch  <alriddoch@zepler.org>

	* skstream/skserver.cpp, skstream/skserver.h,
	  skstream/skstream.cpp, skstream/skstream.h:
	  Re-purpose the shutdown() method of various classes
	  so it no longer closes the socket. This makes it more consistent
	  and sorts out some issues with using epoll() with skstream.
	  Make sure close() is called in the right places in destructors.
	  Fix a bug in the Win32 build where WSACleanup() was getting
	  called at utterly the wrong time.

2004-09-29  Al Riddoch  <alriddoch@zepler.org>

	* Move to using configure.ac with updated contents.

	* Create new README and move old one to README.FreeSockets.

	* Release 0.3.2, interface version 0.0.0.

2004-06-06  Al Riddoch  <alriddoch@zepler.org>

	* Fix devel dependencies in rpm spec.

2004-06-03  James Turner  <james@worldforge.org>

	* XCode project updates; remove pbxuser file from CVS, shouldn't
	  be checked in.

 2004-05-13 Al Riddoch  <alriddoch@zepler.org>
    - skstream/skserver_unix.h: Remove can_accept() from unix_socket_server
      as its not implemented and the version in the base class should be used.
 2003-12-19 Al Riddoch  <alriddoch@zepler.org>
    - Remove Serial from rpm spec as it is not required, and messes up
      deps.
    - Release version 0.3.1
 2003-12-08 Al Riddoch <alriddoch@zepler.org>
    - skstream/skserver.cpp: Correctly use SOCKET_ERROR instead of